# copm

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
docs/: DEVELOPMENT.md
src/: error.rs  lib.rs  main.rs  paths.rs
src/cli/: args.rs
src/commands/: init.rs  install.rs  list.rs  mod.rs  uninstall.rs
src/config/: copm_json.rs  lock.rs  mod.rs
src/fetcher/: git.rs
src/installer/: claude_plugin.rs  copilot.rs  mod.rs
src/manifest/: mod.rs  package_manifest.rs
tests/: integration_test.rs
