[package]
name = "copm"
version = "0.1.0"
edition = "2021"
description = "AI Coding Assistant向けパッケージマネージャ"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
tempfile = "3"
walkdir = "2"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
hex = "0.4"
